# bikeshare-analytics-platform

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: endpoints.ipynb  historical_profiling.ipynb  rt_station_data.ipynb  rt_station_info.ipynb
scripts/: config.py  extract_data.py  fetch_data.py  rt_snapshot.py
src/: config.py  schema_registry.py
src/loaders/: pd_loader.py  pl_loader.py
src/utils/: api_client.py  detect_encoding.py  preprocessing.py
src/validation/: crosswalk.py
