[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bikeshare-analytics-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.5",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "gitpython>=3.1.45",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandera>=0.32.1",
    "plotly>=6.7.0",
    "polars>=1.43.0",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.14.5",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.5",
    "mypy>=1.17.1",
    "nbqa>=1.9.1",
    "nbstripout>=0.9.1",
    "notebook>=7.4.5",
    "ruff>=0.12.8",
]


[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config", "schema_registry"]

[tool.setuptools.packages.find]
where = ["src"]
